# FFMusicRE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
cmake/: use_vcpkg.cmake
inc/: PlayerMgr.h
src/: FileMgr.cpp  FileMgr.h  GBKHelper.cpp  GBKHelper.h  PlayerMgr.cpp  app_controller.cpp  app_controller.h  app_icon.rc  audio_player.cpp  audio_player.h  lrc.cpp  lrc.h  main.cpp  platform_dialogs.cpp  platform_dialogs.h  track.cpp  track.h
ui/: app-window.slint  播放器UI图.pen
ui/components/: action-card.slint  focus-touch-area.slint  icons.slint  lyric-line.slint  meter-bar.slint  music-chip.slint  queue-item.slint  theme.slint  transport-button.slint  types.slint
